namespace * dressdiscover.api.models.object

exception InvalidObjectIdException {
	string cause_message;
}
